# fontra-feamerge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/fontra_feamerge/: __init__.py  backend.py  break_groups_in_fea.py  break_groups_in_mark_pos.py  combine_feature.py  plugin.py
